<resources>
    <string name="app_name">MusicBand</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="pseudo">Pseudo</string>
    <string name="confirmer">Confirmer</string>
    <string name="nom_du_groupe">Nom du groupe</string>
    <string name="description">Description :</string>
    <string name="annuler">Annuler</string>
    <string name="decrivez_votre_groupe">Decrivez votre groupe</string>
    <string name="cr_er_un_groupe">Créer un groupe</string>
    <string name="entrez_le_pseudo">Entrez le pseudo</string>
    <string-array name="instruments">
        <item >Guitare</item>
        <item >Basse</item>
        <item >Piano</item>
        <item >Batterie</item>
        <item >Violon</item>
        <item >Trompette</item>
        <item >Flûte</item>
    </string-array>
    <string-array name="musique">
        <item >Rock</item>
        <item >Blues</item>
        <item >Funk</item>
        <item >Classique</item>
        <item >Country</item>
        <item >Folk</item>
        <item >Jazz</item>
    </string-array>
    <string-array name="niveau">
        <item >Débutant</item>
        <item >Confirmé</item>
        <item >Expert</item>
    </string-array>
</resources>

