<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity"
    android:background="@color/blue">

    <TextView
        android:id="@+id/tvcreateacount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/svInsc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svInsc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcreateacount">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nom" />

            <EditText
                android:id="@+id/et_prenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:ems="10"
                android:hint="@string/pr_nom"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nom" />

            <EditText
                android:id="@+id/et_pseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:ems="10"
                android:hint="@string/pseudo"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spin_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:ems="10"
                android:entries="@array/instruments"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spin_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:ems="10"
                android:entries="@array/instruments"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spin_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:ems="10"
                android:entries="@array/musique"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />


            <Spinner
                android:id="@+id/spin_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:ems="10"
                android:entries="@array/niveau"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/b_confirmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/confirmer"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="374dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>



